fix: lighter checkbox background (rgb 94,80,98) for higher contrast

--- a/scss/module.scss
+++ b/scss/module.scss
@@ -218,6 +218,7 @@
         margin: 0;
         cursor: pointer;
         accent-color: #777;
+        background-color: #5e5062;
     }
 }
 
@@ -270,6 +271,7 @@
         margin: 0;
         cursor: pointer;
         accent-color: #777;
+        background-color: #5e5062;
     }
 }
 
@@ -325,6 +327,7 @@
         margin: 0;
         cursor: pointer;
         accent-color: #777;
+        background-color: #5e5062;
     }
 
     .qc-feature-name {
